# mediaserver

./: .dockerignore  .gitignore  .lychee.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GETTING-STARTED.md  NOTICE  README.md  compose.yaml  deploy-compose.sh  deploy-k8s.sh  deploy.py  deploy.sh  mkdocs.yml  mypy.ini  package-lock.json  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
.ratchets/: cli-commands-registry.yaml  commit-message-baseline.txt  sh-script-baseline.txt
.ratchets/notes/: UI-GAP-AUDIT-v1.1.0.md  auth-lan-bypass.md
apps/: README.md
bootstrap/: media-stack.bootstrap.catalog.yaml  media-stack.bootstrap.json  media-stack.bootstrap.policy.yaml  media-stack.bootstrap.profile.schema.json  media-stack.bootstrap.schema.json  media-stack.bootstrap.yaml
config/defaults/: README.md
config/policies/: README.md  maintainerr.policy.json
config/profiles/: README.md
config/runtime/: README.md  base.json
contracts/: access_urls.yaml  adapter-hooks.k8s.yaml  auth.yaml  branding.yaml  curated-indexers.yaml  epg_providers.yaml  media-stack.catalog.yaml  media-stack.config.json  media-stack.profile.schema.json  media-stack.profile.yaml  media-stack.schema.json  promises.yaml  prowlarr-indexers.example.json  roles.yaml  servarr-policy.yaml  service_admin_providers.yaml  services.yaml  user_providers.yaml
contracts/api/: openapi.yaml
contracts/auth/: oidc_clients.yaml
contracts/catalog/: media_types.yaml  paths.yaml
contracts/defaults/: arr.yaml  downloads.yaml  integrations.yaml  jellyfin.yaml  operations.yaml
contracts/promises/: cross_cutting.yaml  promises.yaml
contracts/services/: _core.yaml  _template.yaml  authelia.yaml  authentik.yaml  bazarr.yaml  core.yaml  emby.yaml  envoy.yaml  flaresolverr.yaml  grabit.yaml  guardrails.yaml  homepage.yaml  jdownloader.yaml  jellyfin.yaml  jellyseerr.yaml  lidarr.yaml  maintainerr.yaml  media_integrity.yaml  mythtv.yaml  nzbget.yaml  openseerr.yaml  plex.yaml  prowlarr.yaml  qbittorrent.yaml  radarr.yaml  readarr.yaml  sabnzbd.yaml  sonarr.yaml  tautulli.yaml  traefik.yaml  transmission.yaml  unpackerr.yaml
contracts/ui_defaults/: iptv_countries.yaml  metadata_presets.yaml
data/transcode/: 0c5abd54312a468aae6ba49b7d2ae5d8_channels  b88bb3516f654f7482e5465afc6048d5_channels
deploy/compose/: .env.example  15-set-resolver.envsh  controller.Dockerfile  docker-compose.yml  ui-nginx.conf  ui.Dockerfile
deploy/k8s/: kustomization.yaml
diagrams/: README.md
docker/: .env  .env.example  bootstrap-runner.Dockerfile  controller.Dockerfile  controller.dev.Dockerfile  docker-compose.yml  homepage-services.yaml  ui.Dockerfile
docs/: README.md  architecture.md  auth-guide.md  auth.md  automation-best-practices.md  bootstrap-profile.md  compose-guide.md  configuration.md  deployment-model.md  device-onboarding.md  first-run-wiring.md  gitops.md  intel-transcoding.md  k8s-deploy-pipeline.md  k8s-guide.md  maintainerr-rules-library.md  networking.md  openapi-regen.md  operational-principles.md  operations.md  premium-ux.md  quickstart.md  repo-layout.md  sdlc.md  security-a11y-contract.md  security-baseline.md  security.md  service-guide.md  service-registry.md  software-design-models.md  source-of-truth.md  storage.md  teardown.md  technology-swaps.md  troubleshooting.md  ui-container.md  ui-design-system.md  upgrades.md  user-management.md  why-this-exists.md
docs/architecture/: adding-a-service.md  api-keys.md  bootstrap-runtime.md  gitops.md  indexer-pipeline.md  k8s-deploy-pipeline.md  orchestrator-coverage-matrix.md  overview.md  phase-5e-deletion-audit.md  premium-ux.md  principles.md  promises-registry.md  repo-layout.md  sdlc.md  security-roadmap.md  supply-chain.md  technology-swaps.md  testing.md
docs/design/: ux-polish-backlog-mockups.md
docs/diagrams/: README.md  bootstrap-runtime-model.mmd  bootstrap-sequence.mmd  deployment-model.mmd  logical-topology.mmd  media-data-pipeline.mmd  mermaid-render-config.json  network-protocol-topology.mmd  operating-loop.mmd  software-component-model.mmd  (+3 more)
examples/: README.md
k8s/: auth-authelia.yaml  auth-authentik.yaml  bootstrap-job.yaml  bootstrap.yaml  controller.yaml  core.yaml  envoy.yaml  ingress-traefik.yaml  keda-workers.example.yaml  kustomization.yaml  networkpolicy.yaml  optional.yaml  prowlarr-auto-indexers-job.yaml  pvc-storage.example.yaml  scale-policy.yaml  secrets.example.yaml  storage-pvc.yaml  storageclass-aks-azurefile.example.yaml  ui.yaml  unpackerr.yaml
platform/: README.md
scripts/: README.md  apply-scale-policy.sh  backup-configs.sh  backup-stack.sh  bootstrap-all.sh  bootstrap-apps.py  bootstrap-debug.sh  build-bootstrap-runner-image.sh  capture-k8s-snapshots.sh  ensure-jellyfin-bootstrap.py  ensure-qbit-credentials.sh  ensure-sabnzbd-api-access.sh  fast-first-run.sh  fix-media-perms.sh  generate-secrets.sh  install.sh  microk8s-patch-ingress-class.sh  microk8s-reconcile.sh  microk8s-smoke-test.sh  post-install-checklist.sh  prepare-host.sh  rebuild-and-bootstrap.sh  rebuild-verify.sh  reconcile-jellyfin-home-rails.sh  render-architecture-diagrams.sh  render-dnsmasq-snippet.sh  render-hosts-example.sh  reset-qbit-webui-auth.sh  restore-stack.sh  run-bootstrap-job.sh  run-integration-test.sh  run-playwright-screenshots.sh  run-playwright-smoke.sh  run-prowlarr-auto-indexers.sh  run_prowlarr_auto_indexers.py  seed-jellyseerr-local-admin.sh  set-jellyfin-api-key.sh  set-pvc-storage-class.sh  set-qbit-secret.sh  set_pvc_storage_class.py  (+10 more)
tests/: README.md
tools/: gen-fixture-codegen-validation.py  hotfix_envoy_ext_authz_headers.py  hotfix_envoy_ext_authz_recover.py  hotfix_envoy_x_original_url.py  recapture-all-fixtures.sh
ui/: .size-limit.json  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+3416 files in other folders)
